--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <div class="project">
             <img src="./Web capture_4-11-2023_192837_hamid-vajeeh70.github.io.jpeg">
             <h3>Project 1</h3>
-            <p>I created this website for Ayathul Quranil Furqani.</p>
+            <p>I created this website for Ayathul Quranil Furqani. <br> <a href="https://hamid-vajeeh70.github.io/Ayathul-Quranil-Furqani/">You can visit this site by clicking here</a></p>
         </div>
         <div class="project">
             <img src="./Web capture_4-11-2023_19305_hamid-vajeeh70.github.io.jpeg">
             <h3>Project 2</h3>
-            <p>This website was also created for Ayathul Quranil Ayathul.</p>
+            <p>This website was also created for Ayathul Quranil Ayathul. <br><a href="https://hamid-vajeeh70.github.io/Ayathul-Quranil-Furqani/aayath.html">You can visit this site by clicking here</a> </p>
         </div>
     </section>
 
