--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
         <h2>Contact Me</h2>
         <p>Email: hamidvajeeh70@gmail.com</p>
         <p>Phone: +91 7736554437</p>
+        <div class="social-media">
+            <a href="https://www.instagram.com/hamid_vjh_/" target="_blank" rel="noopener noreferrer">
+                <img src="./—Pngtree—instagram icon instagram logo_3584852.png" alt="instagram" class="instagram">
+            </a>
+            <a href="https://wa.me/+917736554437" target="_blank" rel="noopener noreferrer">
+                <img src="./toppng.com-whatsapp-ios-icon-1280x1067.png" alt="Whatsapp" class="Whatsapp">
+            </a>
+        </div>
+        
+        
     </section>
 
     <footer>
